--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
  <!DOCTYPE html>
 <html>
-<meta http-equiv="refresh" content="0; url=https://https://therickyfoster.github.io/alpha/v3/">
+<meta http-equiv="refresh" content="0; url=https://therickyfoster.github.io/alpha/v3/">
 </html> 
